--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -20,63 +20,9 @@
 
 <h2><p>Announcements</p></h2>
 <!--
-
-
-
-2020-07-05: Letter grades have been submitted. Enjoy your summer break.<br>
-2020-06-30: Your final exam papers have been graded. You are welcome to set up an appointment with me to review your graded paper and request corrections. (I advise you to do so.) Please finish the review process no later than 18:00 July 2nd, 2020. After this time, your final scores and final grades will not be changed for any reason.<br>
-2020-06-07: <FONT COLOR="red">Homework #14</FONT> has been posted below. This one is for your practice and you do not have to hand it in. It does not get counted toward your credit.<br>
-2020-06-07: <FONT COLOR="red">Homework #13</FONT> has been posted below.<br>
-2020-06-07: If you arrive early on the exam date, please use the waiting room. See the final exam information.<br>
-2020-06-07: Youtube videos Sessions 13-1, 13-2, 13-3, 14-1, 14-2, 14-3, 15-1 will be available on June 8th at 15:00. Find links for video recordings from CBNU eCampus. This completes lecture uploads in this course.<br>
-2020-05-31: <FONT color="#FF00FF"><b>The last day of class</b></FONT> for this course is June the 26th (Friday), 18:00. All attendance claims and homeworks are due by this time. <FONT color="#FF0000"><b>Whatever the reason is</b></FONT> late homework/attendance claims <FONT color="#FF0000"><b>will not</b></FONT> be accepted after this time.<br>
-2020-05-31: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
-2020-05-31: Youtube videos Sessions 12-1, 12-2, 12-3 will be available on June 1st at 15:00. Find links for video recordings from CBNU eCampus.<br>
-2020-05-31: <FONT COLOR="red">Homework #12</FONT> has been posted below.<br>
-2020-05-23: Youtube videos Sessions 11-1, 11-2, 11-3 will be available on May 25th at 15:00. Find links for video recordings from CBNU eCampus.<br>
-2020-05-23: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
-2020-05-18: Youtube videos Sessions 10-1, 10-2, 10-3 will be available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
-2020-05-18: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
-2020-05-11: Youtube videos Sessions 9-1, 9-2, 9-3 will be  available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
-2020-05-11: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>
-2020-05-04: Youtube videos Sessions 8-1, 8-2, 8-3 will be  available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
-2020-05-04: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
-2020-04-27: Youtube videos Sessions 7-1, 7-2, 7-3 will be available today at 15:00. Find links for video recordings from CBNU eCampus.<br>
-2020-04-26: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
-2020-04-22: Please find an announcement below on <FONT color="#000080">remote classes using Youtube videos</FONT>.<br>
-2020-04-22: Please find an update in our plan for <FONT COLOR="#C40062">make-up lesson schedules due to a new Corona Virus (COVID-19) outbreak</FONT> below.<br>
-2020-04-22: The recorded videos from this and the previous weeks' skype meetings are available on CBNU eCampus.<br>
-2020-04-20: Please find the <FONT color="#800080">Assignment for Week 6</FONT> from below.<br>
-2020-04-10: Please find the <FONT color="#800080">Assignment for Week 5</FONT> from below.<br>
-2020-04-09: The recorded video from this week's skype meeting is available on CBNU eCampus.<br>
-2020-04-06: Please find the <FONT color="#800080">Assignment for Week 4</FONT> from below.<br>
-2020-04-02: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
-2020-03-31: Recorded videos from today's and March 19th skype meetings are available on CBNU eCampus.<br>
-2020-03-31: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
-2020-03-29: Please find the <FONT color="#800080">Assignment for Week 3</FONT> from below.<br>
-2020-03-24: Please find an update in our plan for <FONT COLOR="#C40062">Assignment-based Classes</FONT> below.<br>
-2020-03-22: In case we still do not meet in classroom by the due date of any homework, you do not have to come to school for only to hand-in your homework. You can either submit electronically or hand-in when we get to meet each other in classroom. As mentioned on syllabus, late homework are accepted equally. Please be aware of and cooperate in <a href="https://en.wikipedia.org/wiki/Social_distancing"  title="Social distancing">social distancing</a>.<br>
-2020-03-22: Those who want a skype discussion session regarding <FONT color="#800080">Assignment for Week 2</FONT>, please write an email to me to set up an appointment.<br>
-
 2021-06-21: Letter grades have been submitted. Enjoy your summer break.<br>
-2021-05-25: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
-2021-05-14: <FONT COLOR="red">Homework #14</FONT> has been posted below. This one is for your practice and you do not have to hand it in. It does not get counted toward your credit.<br>
-2021-05-14: <FONT COLOR="red">Homework #13</FONT> has been posted below.<br>
-2021-05-14: <FONT COLOR="red">Homework #12</FONT> has been posted below.<br>
-2021-04-26: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
-2021-04-26: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
-2021-04-26: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>
-2021-04-19: <b>PBL project related:</b> Find relevant details on your PBL project for this course below.<br>
-2021-04-11: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
-2021-04-11: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>
-2021-03-21: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
-2021-03-21: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>
-2021-03-21: The previously provided Session 11 video was identical to Session 10, and the error has been corrected as of 21.03.2021 19:00. Obviously if you have watched and got your attendance approved in prior to this update, your attendance is invalid and you have to watch the correct video for your attendance.<br>
-2021-03-19: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
-2021-03-19: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
-2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
-2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-06-08: <FONT COLOR="red">Homework #8</FONT> has been posted below. It will not be collected and will not be counted toward your total score.<br>  
 2022-05-31: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
 2022-05-26: We will not meet on Mondays June the 13th and the 20th. Instead, we will have our final exam on June 17th (Friday).<br> 
 2022-05-26: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
@@ -151,6 +97,15 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 9.1. p.89 #1, 2<br>
  Exercises in Section 9.2. p.93 #1, 2, 3, 4<br>
  Exercises in Section 9.3. p.96 #1, 2, 4<br><br>
+ 
+ <b>Homework  #8</b> 10 problems. Will not be collected.<br>
+ Exercises in Section 10.2. p.101 #1<br>
+ Exercises in Section 10.3. p.104 #1, 2<br>
+ Exercises in Section 11.1. p.107 #1, 2<br>
+ Exercises in Section 11.2. p.110 #1, 4<br>
+ Exercises in Section 11.3. p.113 #1<br>
+ Exercises in Section 12.1. p.118 #1[(i),(ii),(iii)]<br>
+ Exercises in Section 12.2. p.121 #2<br><br>
  
  <!--
 
