--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -125,7 +125,7 @@ Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-c
   
   
 Final Exam: <FONT COLOR="#C40062">17 June (Friday) 14:00--15:40</FONT> Location: TBA. <br>
-- Coverage: Everything we covered in this course including all homework problems.<br>
+- Coverage: Everything we covered in this course by June 9th including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
   
