--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -22,6 +22,7 @@
 <!--
 2021-06-21: Letter grades have been submitted. Enjoy your summer break.<br>
 -->
+2022-06-09: The updated coverage of the final exam has been posted below.<br>  
 2022-06-08: <FONT COLOR="red">Homework #8</FONT> has been posted below. It will not be collected and will not be counted toward your total score.<br>  
 2022-05-31: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
 2022-05-26: We will not meet on Mondays June the 13th and the 20th. Instead, we will have our final exam on June 17th (Friday).<br> 
