--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,6 +55,7 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
+2022-06-10: We have covered up to tangent planes. In Differential Geometry II, we shall resume by reviewing about tangent planes and learning about orientability of surfaces followed by local theories of surfaces. <FONT COLOR="red">Homework #8</FONT> has been updated accordingly.<br>  
 2022-05-29: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2022-05-29: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
 2022-05-23: We will not meet on Mondays June the 13th and the 20th. Instead, we will have our final exam on June 17th (Friday).<br> 
@@ -105,9 +106,9 @@ Problems from Handout 2.<br><br>
 <b>Homework  #7</b> 9 problems. Due Date: June 8th.<br>
 Problems from Handout 3.<br><br>      
   
-<b>Homework  #8</b> 16 problems. Due Date: Before the final exam.<br>  
-Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32.<br>
-Problems from Chapter 8 Part 2: #17, 19(a), 30, 33, 34, 38.<br><br>
+<b>Homework  #8</b> 10 problems. Due Date: Before the final exam.<br>  
+Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br>
+<strike>Problems from Chapter 8 Part 2: #17, 19(a), 28, 30, 34, 38.</strike><br><br>
 
 
 <!-- HW9 about this week's exercises <br> -->
