--- a/teaching/s2022_calc1.html
+++ b/teaching/s2022_calc1.html
@@ -58,6 +58,7 @@
 2021-03-09: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2021-03-02: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2022-06-23: Letter grades have been submitted. Enjoy your summer break.<br>
 2022-05-29: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>   
 2022-05-29: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>    
 2022-05-26: We will not meet on Monday June the 20th. Instead, we will have a make-up lesson on June 13th at 11:00--11:50.<br> 
