--- a/teaching/s2022_dg1.html
+++ b/teaching/s2022_dg1.html
@@ -55,6 +55,7 @@
 2021-03-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 
 -->
+2022-06-23: Letter grades have been submitted. Enjoy your summer break.<br>  
 2022-06-10: We have covered up to tangent planes. In Differential Geometry II, we shall resume by reviewing about tangent planes and learning about orientability of surfaces followed by local theories of surfaces. <FONT COLOR="red">Homework #8</FONT> has been updated accordingly.<br>  
 2022-05-29: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>
 2022-05-29: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
@@ -132,8 +133,8 @@ The average was 61.78. The maximum score achieved by a student was 92.<br><br>
  Final Exam: <FONT COLOR="#C40062">17 June (Friday) 11:00--12:40</FONT> in-class. <br>
 - Coverage: Everything covered in this course including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
-
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+The average was 46.90. The maximum score achieved by a student was 86.<br><br>
   
 
 <h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
