--- a/teaching/s2022_geom1.html
+++ b/teaching/s2022_geom1.html
@@ -22,6 +22,7 @@
 <!--
 2021-06-21: Letter grades have been submitted. Enjoy your summer break.<br>
 -->
+2022-06-23: Letter grades have been submitted. Enjoy your summer break.<br>   
 2022-06-09: The updated coverage of the final exam has been posted below.<br>  
 2022-06-08: <FONT COLOR="red">Homework #8</FONT> has been posted below. It will not be collected and will not be counted toward your total score.<br>  
 2022-05-31: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
@@ -122,14 +123,15 @@ Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 16:00--17:40</FONT> in-c
 - Coverage: Chapters 1 to 6 and 7 (only those sections completed by April 21st class).<br>
 - Update (2022-04-21): The exam will cover Chapters 1 to 6 and part of Chapter 7 (Only Section 7.1).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+The average was 67.32. The maximum score achieved by a student was 95.<br><br>
   
   
 Final Exam: <FONT COLOR="#C40062">17 June (Friday) 14:00--15:40</FONT> Location: TBA. <br>
 - Coverage: Everything we covered in this course by June 9th including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br><br>
-  
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+The average was 67.20. The maximum score achieved by a student was 94.<br><br>  
 
 
  
