--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ Here is my <a href="CV_Park.pdf">CV</a>. My research is supported by the <a href
 <h2><p>Publications and preprints</p></h2>
 <ul>
   <li>Brown representability for directed graphs, with <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>. <a href="http://arxiv.org/abs/2003.07426">ArXiv</a></li>
+  <li>Geometric families define differential K-theory, with <a href="https://sites.google.com/view/jae-min-lee/home">Jae Min Lee</a>.</li>
+  <li>On the smoothness of the geodesic spray for the Camassa-Holm equation, with <a href="https://sites.google.com/view/jae-min-lee/home">Jae Min Lee</a>, <a href="https://doi.org/10.1016/j.jmaa.2022.126472"><em>J. Math. Anal. Appl.</em></a>, <b>516</b>(1) (2022) 126472 1--12.</li>
   <li>Noncommutative differential K-theory, with <a href="https://arthurparzygnat.com/">Arthur J. Parzygnat</a>, <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, and <a href="https://math-inf.uni-greifswald.de/en/department/about-us/employees/augusto-stoffel/">Augusto Stoffel</a>, <a href="https://doi.org/10.1016/j.geomphys.2021.104446"><em>J. Geom. Phys.</em></a>, <b>174</b> (2022) 104446 1--40.<a href="http://arxiv.org/abs/2106.12073">ArXiv</a></li>
   <li>A note on the Venice lemma in differential K-theory, <a href="https://doi.org/10.1007/s00013-021-01681-2"><em>Arch. Math.</em></a>, <b>118</b>(2) (2022) 215--224.</li>
   <li>A classification of equivariant gerbe connections, with <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, <a href="https://doi.org/10.1142/S0219199718500013"><em>Commun.
@@ -44,6 +46,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
   
 <h2><p>In preparation</p></h2>
 <ul>
+  <li>An approach on Euler-Arnold equations via algebraic topology: Sullivan's methodology, with Jae Min Lee.</li>
   <li>Cycle maps in twisted differential K-theory, with Daniel Grady.</li>
   <li>Twisted Atiyah-J&auml;nich theorem, near completion. First draft available.</li>
   <li>Geometric models for twisted differential K-theory II, near completion. First draft available.</li>
