--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <h2><p>About me</p></h2>
- I am an Assistant Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
+I am an Assistant Professor at the <a href=http://edu.chungbuk.ac.kr/mathedu/index.do>Department of Mathematics Education</a>, <a href=https://www.cbnu.ac.kr/site/english/main.do>Chungbuk National University</a>.<br><br>
 
 Previously, I was a Research Fellow (Postdoc) at the <a href="http://www.kias.re.kr/">School of Mathematics, Korea Institute for Advanced Study</a>. Before that, I worked in Bonn, Germany as a Postdoctoral Fellow at <a href="http://www.mpim-bonn.mpg.de/">Max-Planck-Institut f&uuml;r Mathematik</a> and as a guest of <a href="http://www.him.uni-bonn.de/">Hausdorff Research Institute for Mathematics</a>. I also taught mathematics and advised students in New York City for seven semesters. I received my PhD from <a href="http://math.gc.cuny.edu">CUNY Graduate Center</a>. My thesis is <a href="http://academicworks.cuny.edu/gc_etds/1533/">here</a>. Before coming to the US, I studied Mathematics at <a href="http://www.yonsei.ac.kr/">Yonsei University</a> in Seoul, South Korea.<br><br>
 
@@ -64,10 +64,9 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 <h2><p>Teaching</p></h2>
 <dl>
-<dd><a href="teaching/s2022_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
-<dd><a href="teaching/s2022_dg1.html">Differential Geometry I</a></dd>
-<dd><a href="teaching/s2022_geom1.html">Geometry for teachers I</a></dd>
-<dd><a href="teaching/s2022_calc1.html">Calculus I</a></dd>  
+<dd><a href="teaching/f2022_athmme.html">Advanced Topics in History of Mathematics and Mathematics Education</a> (Graduate Course)</dd>
+<dd><a href="teaching/f2022_dg2.html">Differential Geometry II</a></dd>
+<dd><a href="teaching/f2022_calc2.html">Calculus II</a></dd>  
 </dl>
 <ul>
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
@@ -191,7 +190,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 28 February 2022
+Last Updated: 01 September 2022
 
 </font>
 </body>
