--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -15,7 +15,7 @@
 <font size="4" >
 <b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_gcbnu.jpg" width="291" height="79"><br>
 <b>Office Hours:</b> Tuesdays 18:00--18:50 at E1-1 #110 or by appointment.<br>
-<b>Syllabus:</b>  <a href="f2022_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Syllabus:</b>  <a href="f2022_dg2/courseoutline.pdf" title="Open Course Outline">PDF</a> (updated)<br>
 
 
 <h2><p>Announcements</p></h2>
@@ -25,6 +25,7 @@
 
 
 -->
+2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Welcome!<br>
 
