--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -34,9 +34,9 @@
 2022-03-29: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
-2022-03-20: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
-2022-03-16: <b>Announcements</b> The classes will go online during the period March 17th to March 25th. Please read email announcements.<br> -->
-  
+ -->
+
+2022-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
 2022-09-02: <b>Announcements</b> The classes will go online on Tuesday September 6th. Please read email announcements.<br>   
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
@@ -44,13 +44,11 @@
 
 
 <h2><p>Homework</p></h2>
-TBA<br>
-<!-- <b>Homework  #1</b> 15 problems. Due Date: March 30th.<br>
-Section 1.1: #2, 4, 5.<br>
-Section 1.3: #2, 3(1) to (6).<br>
-Section 1.4: #2, 3, 4, 6.<br>  
-Section 1.5: #1, 5, 6, 7, 9, 10.<br><br>
--->
+<b>Homework  #1</b> 10 problems.<br>
+Section 8.6: #1[(1),(2),(4),(6)], 2, 5, 6.<br>
+Section 9.1: #2, 3, 7, 8, 10, 12.<br>
+  <br>
+
 
 
 
