--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -25,26 +25,30 @@
 
 
 -->
+2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>   
+2022-09-16: Video lectures will be available for you to watch during your Practice Teaching period. It will be open on September 19th 00:00. More details from announcements via email and eCampus.<br>
+2022-09-16: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-09-01: The courseoutline has been updated. See above.<br>
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-TBA<br>
-
-  <!--
 Unless otherwise stated, problem numbers below refer to Solved Problems and Supplementary Problems at the end of each chapter.<br><br>
+
+<b>Homework  #1</b> 16 problems.<br>
+Problems from Chapter 8: #17, 19(a), 30, 33, 34, 38.<br>
+Problems from Chapter 9 Part 1: #1, 2, 4, 6, 33, 34, 35, 37, 38, 40.<br>
+  <br> 
+  
+  
+  <!--
 <b>Homework  #1</b> 10 problems. Due Date: September 26th.<br>
 Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="f2021_dg2/hw1no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29 <a href="f2021_dg2/hw1no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32.<br><br>
 
-<b>Homework  #2</b> 10 problems. Due Date: October 10th.<br>
-Problems from Chapter 8 Part 2: #17, 19(a), 30, 33, 34, 38.<br>
-Problems from Chapter 9 Part 1: #1, 2, 4, 6<br>
-<br> 
 
 <b>Homework  #3</b> 12 problems. Due Date: October 17th.<br>
-Problems from Chapter 9 Part 2: #33, 34, 35, 37, 38, 40.<br>
+
 Problems from Chapter 9 Part 3: #7, 9, 12, 41, 42, 43.<br>
 <br>
 
@@ -68,12 +72,13 @@ Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch11.pdf" title
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>
-  <!-- Midterm Exam: <FONT COLOR="#C40062">15 November (Monday),</FONT> In-class.<br>
-- Coverage: Chapters 8 and 9.<br>
-- Total 6 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br>
-- The average was 80.71 and the maximum score achieved by a student was 98.<br>
-- If you think you did not get a score you deserve, you are welcome to dispute. Please do that no later than 18:00 of the day before your final exam day.<br><br>
+1st midterm Exam: <FONT COLOR="#C40062">11 October (Monday),</FONT> In-class.<br>
+- Coverage: From Chapter 8 tangent vectors to Chapter 9 the first fundamental form.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br><br>
+
+ <!--  - The average was 80.71 and the maximum score achieved by a student was 98.<br>
+  
+  
  
  Final Exam: <FONT COLOR="#C40062">13 December (Monday),</FONT> 15:00--16:40 at E1-1 Room 136. <b>Note changed time!</b><br>
 - <b>Please note</b> the change of exam date from December 20th to December 13th!<br>
