--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -36,6 +36,7 @@
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
 
+2022-09-12: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
 2022-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
 2022-09-02: <b>Announcements</b> The classes will go online on Tuesday September 6th. Please read email announcements.<br>   
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
@@ -47,7 +48,10 @@
 <b>Homework  #1</b> 10 problems.<br>
 Section 8.6: #1[(1),(2),(4),(6)], 2, 5, 6.<br>
 Section 9.1: #2, 3, 7, 8, 10, 12.<br>
-  <br>
+
+<b>Homework  #2</b> 10 problems.<br>
+Section 9.3: #1, 2, 4, 6, 7, 8, 9, 11, 12, 13.<br>
+ <br>
 
 
 
