--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -35,8 +35,8 @@
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
-
-2022-09-12: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
+2022-09-16: <b>Announcements</b> The classes will go online on Thursday September 22nd. Please read email announcements.<br>   
+2022-09-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
 2022-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
 2022-09-02: <b>Announcements</b> The classes will go online on Tuesday September 6th. Please read email announcements.<br>   
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
