--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -35,6 +35,7 @@
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
+2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>    
 2022-09-16: <b>Announcements</b> The classes will go online on Thursday September 22nd. Please read email announcements.<br>   
 2022-09-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
 2022-09-12: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>    
@@ -57,7 +58,10 @@ Section 9.3: #1, 2, 4, 6, 7, 8, 9, 11, 12, 13.<br>
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>
+1st midterm Exam: <FONT COLOR="#C40062">04 October (Tuesday),</FONT> In-class.<br>
+- Coverage: Chapter 9.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br><br>
+ 
   <!-- Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-class. <br>
 - Coverage: Chapters 1, 2, 3, and 4(only those sections completed by April 21st class).<br>
 - Update (2022-04-21): All sections of Chapter 4 will be covered. Please bring your photo ID (Student ID or Government ID) with you.<br>
