--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -35,6 +35,8 @@
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
+2022-09-25: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>    
+2022-09-25: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> The coverage has been updated.<br>     
 2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>    
 2022-09-16: <b>Announcements</b> The classes will go online on Thursday September 22nd. Please read email announcements.<br>   
 2022-09-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>    
@@ -54,12 +56,19 @@ Section 9.1: #2, 3, 7, 8, 10, 12.<br>
 Section 9.3: #1, 2, 4, 6, 7, 8, 9, 11, 12, 13.<br>
  <br>
 
+<b>Homework  #3</b> 15 problems.<br>
+Section 9.4: #3, 4, 5, 6, 7, 9, 10.<br>
+Section 9.5: #1, 2, 3, 4.<br>
+Section 9.6: #3.<br>
+Section 9.8: #1, 3, 4.<br>
+ <br>
+ 
 
 
 
 <h2><p>Exam Schedules</p></h2>
 1st midterm Exam: <FONT COLOR="#C40062">04 October (Tuesday),</FONT> In-class.<br>
-- Coverage: Chapter 9.<br>
+- Coverage: Chapter 8 Section 6 and Chapter 9.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br><br>
  
   <!-- Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-class. <br>
