--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -50,11 +50,11 @@
 <h2><p>Homework</p></h2>
 <b>Homework  #1</b> 10 problems.<br>
 Section 8.6: #1[(1),(2),(4),(6)], 2, 5, 6.<br>
-Section 9.1: #2, 3, 7, 8, 10, 12.<br>
+Section 9.1: #2, 3, 7, 8, 10, 12.<br><br>
 
 <b>Homework  #2</b> 10 problems.<br>
-Section 9.3: #1, 2, 4, 6, 7, 8, 9, 11, 12, 13.<br>
- <br>
+Section 9.3: #1, 2, 4, 6, 7, 8, 9, 11, 12, 13.<br><br>
+ 
 
 <b>Homework  #3</b> 15 problems.<br>
 Section 9.4: #3, 4, 5, 6, 7, 9, 10.<br>
