--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -35,6 +35,7 @@
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
+2022-10-13: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>    
 2022-09-25: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>    
 2022-09-25: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> The coverage has been updated.<br>     
 2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>    
@@ -63,13 +64,19 @@ Section 9.6: #3.<br>
 Section 9.8: #1, 3, 4.<br>
  <br>
  
-
+<b>Homework  #4</b> 17 problems.<br>
+Section 10.1: #3, 4.<br>
+Section 10.2: #1, 2, 3, 4, 7.<br>
+Section 10.3: #3, 4, 5, 7.<br>
+Section 10.5: #1, 2, 3, 4, 5, 6.<br><br>
 
 
 <h2><p>Exam Schedules</p></h2>
 1st midterm Exam: <FONT COLOR="#C40062">04 October (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapter 8 Section 6 and Chapter 9.<br>
-- Total 4 questions. Some problems will be identical or closely related to homework problems.<br><br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+  The average was 58.79. The maximum score achieved by a student was 100.<br><br>
  
   <!-- Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-class. <br>
 - Coverage: Chapters 1, 2, 3, and 4(only those sections completed by April 21st class).<br>
