--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -74,8 +74,8 @@ Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch11.pdf" title
 <h2><p>Exam Schedules</p></h2>
 1st midterm Exam: <FONT COLOR="#C40062">11 October (Tuesday),</FONT> In-class.<br>
 - Coverage: From Chapter 8 tangent vectors to Chapter 9 the first fundamental form.<br>
-- Total 4 questions. Some problems will be identical or closely related to homework problems.<br><br>
-
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- The average was 62 and the maximum score achieved by a student was 97.<br><br>
  <!--  - The average was 80.71 and the maximum score achieved by a student was 98.<br>
   
   
