--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
   <li>Geometric models of twisted differential K-theory I, <em><a href="https://link.springer.com/article/10.1007%2Fs40062-017-0177-z">J. Homotopy and Relat. Struct.</a></em>, <b>13</b>(1) (2018) 143--167. <a href="http://arxiv.org/abs/1602.02292">ArXiv</a></li>
   <li>A smooth variant of Hopkins-Singer differential K-theory, <em><a href="http://nyjm.albany.edu/j/2017/23-30.html">New York J. Math.</a></em>,  <b>23</b> (2017) 655--670. <a href="http://arxiv.org/abs/1607.08686">ArXiv</a></li>
  </ul>
-  
-  
+
+<h2><p>Book project</p></h2>
+<ul>
+  <li><em>How can we be good at mathematics?</em> in <b>Knowledge and education in the era of new media</b> with Jin Choi, Seung-Hyun Choi, Hye-Jee Gil, Yeungyu Ha, Jiyoung Hwang, Gail Jeon, Jieun Lim, Sein Shin, Kyung Chan Son, Kyungwon Son, Jooho Song, and Hyun Wi Yoon (2022) <a href="https://www.pybook.co.kr/mall/book/pysstory?goodsno=7459">Pakyoungsa</a>, ISBN-13: 9791165192730 available to purchase at <a href="https://product.kyobobook.co.kr/detail/S000200023928">Kyobo</a> and <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=303014149">Aladin</a>. </li>
+  </ul>
+
+    
 <h2><p>In preparation</p></h2>
 <ul>
   <li>An approach on Euler-Arnold equations via algebraic topology: Sullivan's methodology, with Jae Min Lee.</li>
