--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 <h2><p>Book project</p></h2>
 <ul>
-  <li><em>How can we be good at mathematics?</em> in <b>Knowledge and education in the era of new media</b> with Jin Choi, Seung-Hyun Choi, Hye-Jee Gil, Yeungyu Ha, Jiyoung Hwang, Gail Jeon, Jieun Lim, Sein Shin, Kyung Chan Son, Kyungwon Son, Jooho Song, and Hyun Wi Yoon (2022) <a href="https://www.pybook.co.kr/mall/book/pysstory?goodsno=7459">Pakyoungsa</a>, ISBN-13: 9791165192730 available to purchase at <a href="https://product.kyobobook.co.kr/detail/S000200023928">Kyobo</a> and <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=303014149">Aladin</a>. </li>
+  <li><em>How can we be good at mathematics?</em> in <b>Knowledge and education in the era of new media</b> (in Korean) with Jin Choi, Seung-Hyun Choi, Hye-Jee Gil, Yeungyu Ha, Jiyoung Hwang, Gail Jeon, Jieun Lim, Sein Shin, Kyung Chan Son, Kyungwon Son, Jooho Song, and Hyun Wi Yoon (2022) <a href="https://www.pybook.co.kr/mall/book/pysstory?goodsno=7459">Pakyoungsa</a>, ISBN-13: 9791165192730 available to purchase at <a href="https://product.kyobobook.co.kr/detail/S000200023928">Kyobo</a> and <a href="https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=303014149">Aladin</a>. </li>
   </ul>
 
     
