--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -25,6 +25,7 @@
 
 
 -->
+2022-10-20: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>   
 2022-09-16: Video lectures will be available for you to watch during your Practice Teaching period. It will be open on September 19th 00:00. More details from announcements via email and eCampus.<br>
 2022-09-16: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
@@ -40,13 +41,13 @@ Unless otherwise stated, problem numbers below refer to Solved Problems and Supp
 Problems from Chapter 8: #17, 19(a), 30, 33, 34, 38.<br>
 Problems from Chapter 9 Part 1: #1, 2, 4, 6, 33, 34, 35, 37, 38, 40.<br>
   <br> 
-  
-  
-  <!--
-<b>Homework  #1</b> 10 problems. Due Date: September 26th.<br>
-Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="f2021_dg2/hw1no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 28, 29 <a href="f2021_dg2/hw1no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32.<br><br>
 
-
+<b>Homework  #2</b> 14 problems.<br>  
+Problems from Chapter 9 Part 2: #7, 9, 12, 41, 42, 43.<br>  
+Problems from the National Exam: <a href="f2022_dg2/handout1.pdf" title="Selected problems from the national exam">Handout 1</a>.<br><br>  
+ 
+  
+<!--
 <b>Homework  #3</b> 12 problems. Due Date: October 17th.<br>
 
 Problems from Chapter 9 Part 3: #7, 9, 12, 41, 42, 43.<br>
