--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -35,6 +35,7 @@
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
+2022-10-20: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>    
 2022-10-13: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>    
 2022-09-25: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>    
 2022-09-25: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> The coverage has been updated.<br>     
@@ -70,7 +71,13 @@ Section 10.2: #1, 2, 3, 4, 7.<br>
 Section 10.3: #3, 4, 5, 7.<br>
 Section 10.5: #1, 2, 3, 4, 5, 6.<br><br>
 
+<b>Homework  #5</b> 13 problems.<br>
+Section 10.6: #1, 2, 3, 4, 6, 7, 8.<br>
+Section 10.7: #1, 2, 3[(1),(2)], 5, 6.<br>
+Section 10.9: #1.<br><br>
 
+ 
+ 
 <h2><p>Exam Schedules</p></h2>
 1st midterm Exam: <FONT COLOR="#C40062">04 October (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapter 8 Section 6 and Chapter 9.<br>
