--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -35,6 +35,7 @@
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
+2022-10-28: <FONT color="#FF00FF"><b>2nd midterm exam announcement</b></FONT> Details have been posted below.<br>    
 2022-10-20: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>    
 2022-10-13: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>    
 2022-09-25: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>    
@@ -84,6 +85,12 @@ Section 10.9: #1.<br><br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
   The average was 58.79. The maximum score achieved by a student was 100.<br><br>
+ 
+ 2nd midterm Exam: <FONT COLOR="#C40062">08 November (Tuesday),</FONT> In-class.<br>
+- Coverage: Chapter 10.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br><br>
  
   <!-- Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-class. <br>
 - Coverage: Chapters 1, 2, 3, and 4(only those sections completed by April 21st class).<br>
