--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -25,6 +25,8 @@
 
 
 -->
+2022-11-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
+2022-11-03: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>   
 2022-10-20: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>   
 2022-09-16: Video lectures will be available for you to watch during your Practice Teaching period. It will be open on September 19th 00:00. More details from announcements via email and eCampus.<br>
@@ -45,21 +47,14 @@ Problems from Chapter 9 Part 1: #1, 2, 4, 6, 33, 34, 35, 37, 38, 40.<br>
 <b>Homework  #2</b> 14 problems.<br>  
 Problems from Chapter 9 Part 2: #7, 9, 12, 41, 42, 43.<br>  
 Problems from the National Exam: <a href="f2022_dg2/handout1.pdf" title="Selected problems from the national exam">Handout 1</a>.<br><br>  
- 
+
+<b>Homework  #3</b> 12 problems.<br>  
+Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
+Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>  
+  
+  
   
 <!--
-<b>Homework  #3</b> 12 problems. Due Date: October 17th.<br>
-
-Problems from Chapter 9 Part 3: #7, 9, 12, 41, 42, 43.<br>
-<br>
-
-<b>Homework  #4</b> 11 problems. Due Date: October 31st.<br>
-Problems from Chapter 9 Part 4: #10, 21, 22, 44, 48.<br>
-Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch9.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
-
-<b>Homework  #5</b> 7 problems. Due Date: Before the midterm exam.<br> 
-Problems from Chapter 9 Part 5: #26, 27, 45, 46, 47, 52, 55.<br><br>
-
 <b>Homework  #6</b> 6 problems. Due Date: November 21st.<br>
 Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br><br> 
 
@@ -77,7 +72,12 @@ Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch11.pdf" title
 - Coverage: From Chapter 8 tangent vectors to Chapter 9 the first fundamental form.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - The average was 62 and the maximum score achieved by a student was 97.<br><br>
- <!--  - The average was 80.71 and the maximum score achieved by a student was 98.<br>
+  
+2nd midterm Exam: <FONT COLOR="#C40062">15 November (Tuesday),</FONT> In-class.<br>
+- Coverage: The entire Chapter 9 after the first fundamental form.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+<br>
+ <!--  - The average was 62 and the maximum score achieved by a student was 97.<br>
   
   
  
