--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@ Here is my <a href="CV_Park.pdf">CV</a>. My research is supported by the <a href
 
 
 <!-- 365 Fifth Ave. CUNY Graduate Center Mathematics Room 4208, New York, NY 10016 -->
-<!-- BE CAREFUL, CASE SENSITIVE about FILE FORMAT -->
-<b>Email:</b> <img src="images/eml_gcbnu.jpg" width="291" height="79">  <b>Alternative email:</b> <img src="images/eml_gmail1.jpg" width="348" height="63"><br><br>
+<!--   <b>Alternative email:</b> <img src="images/eml_gmail1.jpg" width="348" height="63"><br> <img src="images/eml_gcbnu.jpg" width="291" height="79"> <br> -->
+<!-- BE CAREFUL, CASE SENSITIVE about FILE FORMAT   -->
+<b>Email:</b>  <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
 
 
 <h2><p>Research Interest</p></h2>
