--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -13,7 +13,7 @@
 
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
-<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_gcbnu.jpg" width="291" height="79"><br>
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
 <b>Office Hours:</b> Tuesdays 18:00--18:50 at E1-1 Room 110.<br>
 <b>Syllabus:</b>  <a href="f2022_calc2/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
