--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <font face="Times New Roman">
 <body>
-<img src="images/bdp_20161120.jpg" width="294" height="392"><br><br>Am Poppelsdorf. Photo by J. R.<br>
+<img src="images/bdp_20220910.jpg" width="300" height="400"><br><br>Mit V&ouml;geln<br> -->
+<!-- <img src="images/bdp_20161120.jpg" width="294" height="392"><br><br>Am Poppelsdorf. Photo by J. R.<br> -->
 
 
 <h2><p>About me</p></h2>
