--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -90,7 +90,8 @@ Section 10.9: #1.<br><br>
 - Coverage: Chapter 10.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
-- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br><br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
+  The average was 75.24. The maximum score achieved by a student was 100.<br><br>
  
   <!-- Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-class. <br>
 - Coverage: Chapters 1, 2, 3, and 4(only those sections completed by April 21st class).<br>
