--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -76,8 +76,8 @@ Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch11.pdf" title
 2nd midterm Exam: <FONT COLOR="#C40062">15 November (Tuesday),</FONT> In-class.<br>
 - Coverage: The entire Chapter 9 after the first fundamental form.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
-<br>
- <!--  - The average was 62 and the maximum score achieved by a student was 97.<br>
+- The average was 62 and the maximum score achieved by a student was 97.<br><br>
+ <!--  - The average was 52.72 and the maximum score achieved by a student was 80.<br>
   
   
  
