--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -25,6 +25,7 @@
 
 
 -->
+2022-11-18: <FONT COLOR="red">Homework #4, #5</FONT> have been posted below.<br>
 2022-11-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
 2022-11-03: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>   
 2022-10-20: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
@@ -52,17 +53,18 @@ Problems from the National Exam: <a href="f2022_dg2/handout1.pdf" title="Selecte
 Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
 Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>  
   
+<b>Homework  #4</b> 13 problems.<br>
+Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br><br> 
+Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
+
+<b>Homework  #5</b> 8 problems.<br>
+Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>  
   
   
 <!--
-<b>Homework  #6</b> 6 problems. Due Date: November 21st.<br>
-Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br><br> 
-
-<b>Homework  #7</b> 7 problems. Due Date: Before the final exam.<br>
-Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
 
 <b>Homework  #8</b> 7 problems. Due Date: Before the final exam.<br>
-Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch11.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
 
  -->
 
@@ -76,8 +78,10 @@ Problems from the National Exam: <a href="f2021_dg2/nationalexam_ch11.pdf" title
 2nd midterm Exam: <FONT COLOR="#C40062">15 November (Tuesday),</FONT> In-class.<br>
 - Coverage: The entire Chapter 9 after the first fundamental form.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
-- The average was 62 and the maximum score achieved by a student was 97.<br><br>
- <!--  - The average was 52.72 and the maximum score achieved by a student was 80.<br>
+- The average was 52.72 and the maximum score achieved by a student was 80.<br><br>
+
+  
+  <!--  - The average was 52.72 and the maximum score achieved by a student was 80.<br>
   
   
  
