--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -35,6 +35,8 @@
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
+2022-11-18: <FONT color="#FF00FF"><b>3rd midterm exam announcement</b></FONT> Details have been posted below.<br>    
+2022-11-18: <FONT COLOR="red">Homework #6, #7</FONT> have been posted below.<br>   
 2022-10-28: <FONT color="#FF00FF"><b>2nd midterm exam announcement</b></FONT> Details have been posted below.<br>    
 2022-10-20: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>    
 2022-10-13: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>    
@@ -76,6 +78,15 @@ Section 10.5: #1, 2, 3, 4, 5, 6.<br><br>
 Section 10.6: #1, 2, 3, 4, 6, 7, 8.<br>
 Section 10.7: #1, 2, 3[(1),(2)], 5, 6.<br>
 Section 10.9: #1.<br><br>
+ 
+<b>Homework  #6</b> 13 problems.<br>
+Section 11.2: #1, 2, 3, 5.<br>
+Section 11.3: #1, 2, 4, 5, 6.<br>
+Section 11.4: #1, 2, 3, 4.<br>
+ 
+<b>Homework  #7</b> 9 problems.<br>
+Section 11.5: #1, 4, 5, 6.<br>
+Section 11.7: #1, 4, 5, 7, 9.<br><br>
 
  
  
@@ -92,6 +103,13 @@ Section 10.9: #1.<br><br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
 - Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
   The average was 75.24. The maximum score achieved by a student was 100.<br><br>
+
+ 3rd midterm Exam: <FONT COLOR="#C40062">29 November (Tuesday),</FONT> In-class.<br>
+- Coverage: Chapter 11.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
+ <br>
  
   <!-- Midterm Exam: <FONT COLOR="#C40062">28 April (Thursday) 10:00--11:40</FONT> in-class. <br>
 - Coverage: Chapters 1, 2, 3, and 4(only those sections completed by April 21st class).<br>
