--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -54,7 +54,7 @@ Problems from Chapter 9 Part 3: #10, 21, 22, 44, 48.<br>
 Problems from Chapter 9 Part 4: #26, 27, 45, 46, 47, 52, 55.<br><br>  
   
 <b>Homework  #4</b> 13 problems.<br>
-Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br><br> 
+Problems from Chapter 10: #3, 8, 9, 10, 30, 38.<br>
 Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
 
 <b>Homework  #5</b> 8 problems.<br>
