--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -25,9 +25,10 @@
 
 
 -->
+2022-11-18: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>   
 2022-11-18: <FONT COLOR="red">Homework #4, #5</FONT> have been posted below.<br>
 2022-11-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
-2022-11-03: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>   
+2022-11-03: <FONT color="#FF00FF"><b>2nd midterm exam announcement</b></FONT> Details have been posted below.<br>   
 2022-10-20: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2022-09-16: <FONT color="#FF00FF"><b>1st midterm exam announcement</b></FONT> Details have been posted below.<br>   
 2022-09-16: Video lectures will be available for you to watch during your Practice Teaching period. It will be open on September 19th 00:00. More details from announcements via email and eCampus.<br>
@@ -79,6 +80,11 @@ Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selecte
 - Coverage: The entire Chapter 9 after the first fundamental form.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - The average was 52.72 and the maximum score achieved by a student was 80.<br><br>
+  
+Finam Exam: <FONT COLOR="#C40062">15 December (Thursday),</FONT> 13:00--14:50 at E1-1 Room 136.<br>
+- Coverage: Everything we have covered in this semester.<br>
+- Total 6 questions. There will be 1 set of T/F questions, 2 problems identical to the national exam problems, and 3 problems similar to national exams and/or homework problems.<br>
+<br>  
 
   
   <!--  - The average was 52.72 and the maximum score achieved by a student was 80.<br>
