--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -82,7 +82,7 @@ Section 10.9: #1.<br><br>
 <b>Homework  #6</b> 13 problems.<br>
 Section 11.2: #1, 2, 3, 5.<br>
 Section 11.3: #1, 2, 4, 5, 6.<br>
-Section 11.4: #1, 2, 3, 4.<br>
+Section 11.4: #1, 2, 3, 4.<br><br>
  
 <b>Homework  #7</b> 9 problems.<br>
 Section 11.5: #1, 4, 5, 6.<br>
