--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -25,6 +25,7 @@
 
 
 -->
+2022-11-29: If you wish to see graded papers and the class attendance record, please send an email to the instructor to set up an appointment by December 19th, 2022 18:00.<br>
 2022-11-18: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>   
 2022-11-18: <FONT COLOR="red">Homework #4, #5</FONT> have been posted below.<br>
 2022-11-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>
