--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -35,6 +35,8 @@
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
+2022-11-29: If you wish to see graded papers and the class attendance record, please send an email to the instructor to set up an appointment by December 19th, 2022 18:00.<br> 
+2022-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>    
 2022-11-18: <FONT color="#FF00FF"><b>3rd midterm exam announcement</b></FONT> Details have been posted below.<br>    
 2022-11-18: <FONT COLOR="red">Homework #6, #7</FONT> have been posted below.<br>   
 2022-10-28: <FONT color="#FF00FF"><b>2nd midterm exam announcement</b></FONT> Details have been posted below.<br>    
@@ -106,6 +108,13 @@ Section 11.7: #1, 4, 5, 7, 9.<br><br>
 
  3rd midterm Exam: <FONT COLOR="#C40062">29 November (Tuesday),</FONT> In-class.<br>
 - Coverage: Chapter 11.<br>
+- Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+- Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
+ <br>
+ 
+  Final Exam: <FONT COLOR="#C40062">15 December (Thursday) 17:00--17:50,</FONT> at E1-2 Room 306.<br>
+- Coverage: Chapter 12.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
 - Bring with you one of the following: (i) Government ID (ii) Student ID card (iii) A printed paper sheet of screenshot of your mobile student ID including your name, student ID, and your photo. If you don't have a valid ID listed here, you will be asked to leave the classroom and your exam score will be zero.<br>
