--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -25,6 +25,8 @@
 
 
 -->
+
+2022-12-03: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
 2022-11-29: If you wish to see graded papers and the class attendance record, please send an email to the instructor to set up an appointment by December 19th, 2022 18:00.<br>
 2022-11-18: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>   
 2022-11-18: <FONT COLOR="red">Homework #4, #5</FONT> have been posted below.<br>
@@ -62,6 +64,8 @@ Problems from Chapter 11: #8, 10, 30, 32, 33, 54, 55.<br><br>
 <b>Homework  #5</b> 8 problems.<br>
 Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 2</a>.<br><br>  
   
+<b>Homework  #6</b> 2 problems.<br>
+<a href="f2022_dg2/handout2.pdf" title="Selected problems from the national exam">Handout 3</a>.<br><br>    
   
 <!--
 
