--- a/teaching/f2022_calc2.html
+++ b/teaching/f2022_calc2.html
@@ -35,6 +35,7 @@
 2022-03-29: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  
 2022-03-20: <b>Announcements</b> Video lectures are now available on eCampus. Those upcoming lectures will be available by the class meeting time.<br>   
  -->
+2022-12-05: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>    
 2022-11-29: If you wish to see graded papers and the class attendance record, please send an email to the instructor to set up an appointment by December 19th, 2022 18:00.<br> 
 2022-11-29: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>    
 2022-11-18: <FONT color="#FF00FF"><b>3rd midterm exam announcement</b></FONT> Details have been posted below.<br>    
@@ -90,6 +91,13 @@ Section 11.4: #1, 2, 3, 4.<br><br>
 Section 11.5: #1, 4, 5, 6.<br>
 Section 11.7: #1, 4, 5, 7, 9.<br><br>
 
+<b>Homework  #8</b> 28 problems.<br>
+Section 12.1: #1, 2, 3, 6[(1),(3),(5)].<br>
+Section 12.3: #1, 2, 3, 7, 8.<br>
+Section 12.4: #2, 4, 5, 6.<br>
+Section 12.5: #2, 3, 4, 5.<br>
+Section 12.6: #1, 2, 5, 7.<br>
+Section 12.7: #2, 5, 6, 7, 8, 9, 10.<br><br> 
  
  
 <h2><p>Exam Schedules</p></h2>
