--- a/teaching/f2022_dg2.html
+++ b/teaching/f2022_dg2.html
@@ -25,7 +25,7 @@
 
 
 -->
-
+2022-12-20: Letter grades have been submitted. Happy Holidays!<br>
 2022-12-06: On this Thursday, we shall go over this <a href="f2022_dg2/handout4.pdf" title="Handout 4">handout</a>.<br>
 2022-12-03: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>
 2022-11-29: If you wish to see graded papers and the class attendance record, please send an email to the instructor to set up an appointment by December 19th, 2022 18:00.<br>
@@ -90,23 +90,11 @@ Problems from the National Exam: <a href="f2022_dg2/handout2.pdf" title="Selecte
 Finam Exam: <FONT COLOR="#C40062">15 December (Thursday),</FONT> 13:00--14:50 at E1-1 Room 136.<br>
 - Coverage: Everything we have covered in this semester.<br>
 - Total 6 questions. There will be 1 set of T/F questions, 2 problems identical to the national exam problems, and 3 problems similar to national exams and/or homework problems.<br>
-<br>  
+- The average was 52.72 and the maximum score achieved by a student was 84.<br><br> 
+
 
   
-  <!--  - The average was 52.72 and the maximum score achieved by a student was 80.<br>
   
-  
- 
- Final Exam: <FONT COLOR="#C40062">13 December (Monday),</FONT> 15:00--16:40 at E1-1 Room 136. <b>Note changed time!</b><br>
-- <b>Please note</b> the change of exam date from December 20th to December 13th!<br>
-- Coverage: Chapters 8, 9, 10, and 11. In Chapters 10 and 11, only those sections we covered in class will be included to the coverage.<br>
-- Total 6 questions. There will be one True/False question (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect.) and some questions will be identical to old National Exam problems.<br><br>
-<br>
-
- 
-
- -->
-
 <h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
 For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
 (1) A sample lecture on any topic listed on the syllabus of this course.<br>
