--- a/teaching/f2022_athmme.html
+++ b/teaching/f2022_athmme.html
@@ -25,13 +25,14 @@
 
 
 -->
+2022-12-21: Letter grades have been submitted. Happy Holidays!<br>  
 2022-09-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/f2022_dg2/2022-09-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2022-09-01: Welcome!<br>
 
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA<br>
+No exams in this course.<br>
   <!-- Midterm Exam: <FONT COLOR="#C40062">15 November (Monday),</FONT> In-class.<br>
 - Coverage: Chapters 8 and 9.<br>
 - Total 6 questions. There will be a set of true/false questions. At least 4 problems will be identical or closely related to homework problems.<br>
