--- a/teaching/f2022_athmme.html
+++ b/teaching/f2022_athmme.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> Differential Geometry II </title>
+<title> Advanced Topics in History of Mathematics and Mathematics Education </title>
 </head>
 <font face="Times New Roman">
 <body>
