--- a/teaching/s2023_geom1.html
+++ b/teaching/s2023_geom1.html
@@ -1,27 +1,26 @@
 <html>
 <head>
-<title> Geometry for teachers I </title>
+<title> Geometry for teachers </title>
 </head>
 <font face="Times New Roman">
 <body>
-<h1><p align="center">Geometry for teachers I</p></h1>
-<h3><p align="center">Course 7412074 Section 01, Spring 2022</p></h3>
-<h3><p align="center">Mondays 16:00 - 16:50, Thursdays 16:00 - 17:50, Room: E1-2 #306</p></h3>
+<h1><p align="center">Geometry for teachers</p></h1>
+<h3><p align="center">Course 7412647 Section 01, Spring 2023</p></h3>
+<h3><p align="center">Tuesdays 10:00 - 11:50, Wednesdays 17:00 - 17:50, Room: E1-1 #136</p></h3>
 <h3><p align="center">Chungbuk National University</p></h3>
 <br>
 
 
 <!-- FONT SIZE SPECIFICATION-->
 <font size="4" >
-<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_gcbnu.jpg" width="291" height="79"><br>
-<b>Office Hours:</b> Mondays 17:00--17:50 at E1-1 Room 110.<br>
-<b>Syllabus:</b>  <a href="s2022_geom1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
+<b>Office Hours:</b> Tuesdays 18:00--18:50 at E1-1 Room 110.<br>
+<b>Syllabus:</b>  <a href="s2023_geom1/courseoutline.pdf" title="Open Course Outline">PDF</a><br>
 
 
 <h2><p>Announcements</p></h2>
 <!--
 2021-06-21: Letter grades have been submitted. Enjoy your summer break.<br>
--->
 2022-06-23: Letter grades have been submitted. Enjoy your summer break.<br>   
 2022-06-09: The updated coverage of the final exam has been posted below.<br>  
 2022-06-08: <FONT COLOR="red">Homework #8</FONT> has been posted below. It will not be collected and will not be counted toward your total score.<br>  
@@ -45,8 +44,10 @@
 2022-03-11: <b>Announcements</b> Please see the standard operation procedures for an absentism for an extensive period due to SARS-CoV-2. <a href="../teaching/s2022_dg1/2022-03-11_long_covid_absence.pdf" title="Long absence due to SARS-CoV-2">PDF</a><br>
 2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
-2022-03-03: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
-2022-03-02: Welcome!<br>
+-->
+2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
+2023-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
+2023-03-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
