--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 <h2><p>Teaching</p></h2>
 <dl>
-<dd><a href="teaching/f2022_athmme.html">Advanced Topics in History of Mathematics and Mathematics Education</a> (Graduate Course)</dd>
-<dd><a href="teaching/f2022_dg2.html">Differential Geometry II</a></dd>
-<dd><a href="teaching/f2022_calc2.html">Calculus II</a></dd>  
+
+  
+<dd><a href="teaching/s2023_dg1.html">Differential Geometry I</a></dd>
+<dd><a href="teaching/s2023_geom1.html">Geometry for teachers</a></dd>
+<dd><a href="teaching/s2023_introgeom.html">Introduction to Geometry</a></dd>
+<dd><a href="teaching/s2023_calc1.html">Calculus I</a></dd>  
+<dd><a href="teaching/cbnu_uc/s2023_0931019_courseoutline.pdf">Knowledge and education in the era of AI convergence</a> (Undergraduate common course)</dd>
 </dl>
 <ul>
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
@@ -197,7 +201,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 01 September 2022
+Last Updated: 01 March 2023
 
 </font>
 </body>
