--- a/teaching/s2023_dg1.html
+++ b/teaching/s2023_dg1.html
@@ -41,7 +41,11 @@
 2022-03-11: <b>Announcements</b> Please see the standard operation procedures for an absentism for an extensive period due to SARS-CoV-2. <a href="../teaching/s2022_dg1/2022-03-11_long_covid_absence.pdf" title="Long absence due to SARS-CoV-2">PDF</a><br>
 2022-03-04: Office hour has been changed to Mondays 17:00--17:50.<br>
 -->
-2022-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
+  
+2023-03-26: The <b>1st midterm exam</b> will cover all materials in Chapters 3 and 4. There will be a handout consisting of 8 old national exam problems but only 1 problem will appear in the 1st midterm. (I shall leave out 3 problems for the 2nd midterm and the final exam. So for the 1st midterm, it is 1 out of 5.) In the meantime, please read the textbook thoroughly and master homework problems. 
+2023-03-26: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>     
+2023-03-26: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
+2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br>
 2023-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
 2023-03-01: Welcome!<br>
@@ -51,19 +55,21 @@
 <b>Homework  #1</b> 11 problems. Due Date: March 30th.<br>
 Problems from Chapter 3: #1, 9, 15, 17, 18, 21, 25, 26, 31, 32, 34.<br><br>
 
+<b>Homework  #2</b> 8 problems.<br>
+Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
+
+<b>Homework  #3</b> 10 problems.<br>
+Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>  
+
+ 
   
   <!--
 
-
-<b>Homework  #2</b> 8 problems. Due Date: April 6th.<br>
-Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
-
-<b>Homework  #3</b> 10 problems. Due Date: April 13th.<br>
-Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>  
-
-<b>Homework  #4</b> 12 problems. Due Date: April 20th.<br>
+<b>Homework  #4</b> 12 problems.<br>
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>  
-Problems from the National Exam: <a href="s2022_dg1/hw4.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>  
+Problems from the National Exam: <a href="s2023_dg1/handout1.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+ 
+  
 
 <b>Homework  #5</b>  20 problems. Due Date: May 18th.<br>
 Problems from Chapter 5: #5, 7, 8<br>
@@ -95,9 +101,9 @@ Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addend
 TBA<br>
 <!--
 Midterm Exam: <FONT COLOR="#C40062">22 April (Friday) 11:00--12:40</FONT> in-class. <br>
-- Coverage: Chapters 3, 4, and 5(p.80 only) of the main textbook including all homework problems.<br>
-- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department.<br>
+- Coverage: Chapters 3 and 4 of the main textbook and Handout 1 problems (2016 to 2020 problems only; 2021 to 2023 problems will be covered in the 2nd midterm) <br>
+- Total 4 questions.
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 The average was 61.78. The maximum score achieved by a student was 92.<br><br>
   
  Final Exam: <FONT COLOR="#C40062">17 June (Friday) 11:00--12:40</FONT> in-class. <br>
