--- a/teaching/s2023_dg1.html
+++ b/teaching/s2023_dg1.html
@@ -52,7 +52,7 @@
 
 
 <h2><p>Homework</p></h2>
-<b>Homework  #1</b> 11 problems. Due Date: March 30th.<br>
+<b>Homework  #1</b> 11 problems.<br>
 Problems from Chapter 3: #1, 9, 15, 17, 18, 21, 25, 26, 31, 32, 34.<br><br>
 
 <b>Homework  #2</b> 8 problems.<br>
