--- a/teaching/s2023_introgeom.html
+++ b/teaching/s2023_introgeom.html
@@ -56,7 +56,7 @@
  
 <h2><p>Homework</p></h2>
 <b>Homework  #1</b> 14 problems. Due Date: March 15th (Wed).<br>
-Problems 1 to 14<br>
+Problems 1 to 14<br><br>
 <b>Homework  #2</b> 12 problems. Due Date: March 22nd (Wed).<br>
 Problems 15 to 26<br><br>
 <b>Homework  #3</b> 15 problems. Due Date: March 29th (Wed).<br>
