--- a/teaching/s2023_calc1.html
+++ b/teaching/s2023_calc1.html
@@ -62,7 +62,7 @@ Section 1.5: #1, 5, 6, 7, 9, 10.<br><br>
 <b>Homework  #2</b> 19 problems.<br>
 Section 2.1: #3, 4, 5, 7, 8.<br>
 Section 2.2: #5, 6, 9, 10[(1),(3),(5)].<br>
-Section 2.3: #1[(1),(3),(5),(7)], 2, 3, 4.<br><br>
+Section 2.3: #1[(1),(3),(5),(7)], 2, 3, 4.<br>
 Section 2.4: #2[(1),(3),(5),(7)], 3, 4.<br>
 Section 2.5: #1, 2(1), 4.<br><br>
   
